# The8085_v2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  asm.c  asm.h  bytecode.c  bytecode.h  calibrate.c  calibrate.h  codegen.h  codegen_bcvm.c  codegen_neovm.c  common.h  compiler.c  compiler.h  cosmetic.h  display.c  display.h  dump.c  dump.h  instruction.h  instruction_details.c  instruction_details.h  machine.c  main.c  neobytecode.c  neocompiler.c  neovm.c  scanner.c  scanner.h  test.8085  test.c  util.c  util.h  vm.c  vm.h
programs/: ab_plus_cd.8085  add16.8085  addmem.8085  ap.8085  bcdtohex.8085  bintogray.8085  bubblesort.8085  divide.8085  fib_nterms.8085  fib_upton.8085  gcd.8085  graytobin.8085  hextobcd.8085  largest.8085  mult.8085  sqrt.8085  store_sum.8085  submem.8085
programs/exam/: bubble_sort_ultimate.8085  insertion_sort_ultimate.8085  merge_sort.8085  mult_16.8085  selection_sort_ultimate.8085
programs/exam/2013/: 16_by_8.8085  a3_minus_b3.8085  add16.8085  byte_palindrome.8085  count_bits.8085  gcd.8085  odd_and_even_parity.8085  selection_sort.8085  sub_2s_comp.8085  third_smallest.8085
programs/exam/2018/day1/: 1_2x_y.8085  2_count_equal_nibble.8085  3_series_sqrt.8085  4_area.8085  5_denote_array.8085  6_fib_odd.8085
test/: aci.8085  adc.8085  add.8085  adi.8085  ana.8085  ani.8085  call.8085  cc.8085  cm.8085  cmc.8085  cnc.8085  cnz.8085  cp.8085  cpe.8085  cpo.8085  cz.8085  daa.8085  dad.8085  dcr.8085  dcx.8085  flg_a.8085  inr.8085  inx.8085  jpe.8085  jpo.8085  lhld.8085  loop.8085  lxi.8085  mov.8085  mvi.8085  ora.8085  ori.8085  pchl.8085  pop.8085  push.8085  rc.8085  ret.8085  rm.8085  rnc.8085  rnz.8085  (+30 more)
